# llm-api-router

./: .env.example  .gitignore  Cargo.toml  README.md  config.yaml.example
.github/workflows/: ci.yml  release.yml
src/: config.rs  error.rs  health.rs  lib.rs  main.rs  routing.rs
src/provider/: mod.rs  openai.rs
src/server/: auth.rs  handlers.rs  mod.rs
tests/: integration_test.rs
