[package]
name = "llm-api-router"
version = "0.1.0"
edition = "2021"
description = "LLM API Router with priority-based failover"

[dependencies]
# Web 框架
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }

# HTTP 客户端
reqwest = { version = "0.11", features = ["json"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 环境变量
dotenvy = "0.15"

# 异步 trait
async-trait = "0.1"

# 错误处理
thiserror = "1"
